--- a/contact.html
+++ b/contact.html
@@ -18,14 +18,14 @@
 
 <body>
     <header>
-        <a href="http://127.0.0.1:5500/index.html" class="n2_logo"> Let's Travel</a>
+        <a href="https://letstravelvn.netlify.app/index.html" class="n2_logo"> Let's Travel</a>
         <div class="n2_menu_btn"></div>
         <div class="n2_navigation">
             <div class="n2_navigation_items">
-                <a href="http://127.0.0.1:5500/home.html">Trang Chủ</a>
-                <a href="http://127.0.0.1:5500/index.html">Giới Thiệu</a>
-                <a href="http://127.0.0.1:5500/expore.html">Du Lịch</a>
-                <a href="http://127.0.0.1:5500/contact.html">Liên Hệ</a>
+                <a href="https://letstravelvn.netlify.app/home.html">Trang Chủ</a>
+                <a href="https://letstravelvn.netlify.app/index.html">Giới Thiệu</a>
+                <a href="https://letstravelvn.netlify.app/expore.html">Du Lịch</a>
+                <a href="https://letstravelvn.netlify.app/contact.html">Liên Hệ</a>
             </div>
         </div>
     </header>
@@ -39,7 +39,7 @@
 
   <textarea id="n2_noidung" name="noidung" rows="4" cols="50" placeholder="Nội dung(*)"></textarea>
   <br>
- <a href="http://127.0.0.1:5500/home.html"><button type="submit"> Submit</button></a>
+ <a href="https://letstravelvn.netlify.app/home.html"><button type="submit"> Submit</button></a>
         </div>
         <div class="n2_container_contact_items">
             <h2>THÔNG TIN LIÊN HỆ</h2>
