--- a/home.html
+++ b/home.html
@@ -19,14 +19,14 @@
 
 <body>
   <header>
-    <a href="http://127.0.0.1:5500/index.html" class="n2_logo"> Let's Travel</a>
+    <a href="https://letstravelvn.netlify.app/index.html" class="n2_logo"> Let's Travel</a>
     <div class="n2_menu_btn"></div>
     <div class="n2_navigation">
       <div class="n2_navigation_items">
-        <a href="http://127.0.0.1:5500/home.html">Trang Chủ</a>
-        <a href="http://127.0.0.1:5500/index.html">Giới Thiệu</a>
-        <a href="http://127.0.0.1:5500/expore.html">Du Lịch</a>
-        <a href="http://127.0.0.1:5500/contact.html">Liên Hệ</a>
+        <a href="https://letstravelvn.netlify.app/home.html">Trang Chủ</a>
+        <a href="https://letstravelvn.netlify.appindex.html">Giới Thiệu</a>
+        <a href="https://letstravelvn.netlify.app/expore.html">Du Lịch</a>
+        <a href="https://letstravelvn.netlify.app/contact.html">Liên Hệ</a>
       </div>
     </div>
     <div class="n2_center">
@@ -37,7 +37,7 @@
   </header>
   <div class="n2_search">
     <div>
-      <button class="n2_button"><span><a href="./expore.html"> Tour Du Lịch</a> </span></button>
+      <button class="n2_button"><span><a href="https://letstravelvn.netlify.app/expore.html"> Tour Du Lịch</a> </span></button>
     </div>
   </div>
   <section>
@@ -52,7 +52,7 @@
           <img class="n2_star" src="./image/star.png">
           <img class="n2_star" src="./image/star.png">
         </span>
-        <br><span><a href="http://127.0.0.1:5500/expore.html" class="n2_btn_ct">Xem thêm</a></span>
+        <br><span><a href="https://letstravelvn.netlify.app/expore.html" class="n2_btn_ct">Xem thêm</a></span>
       </div>
       <div class="n2_container_items">
         <h2>Huế</h2>
@@ -63,7 +63,7 @@
           <img class="n2_star" src="./image/star.png">
           <img class="n2_star" src="./image/star.png">
         </span>
-        <br><span><a href="http://127.0.0.1:5500/expore.html" class="n2_btn_ct">Xem thêm</a></span>
+        <br><span><a href="https://letstravelvn.netlify.app/expore.html" class="n2_btn_ct">Xem thêm</a></span>
       </div>
       <div class="n2_container_items">
         <h2>Đà Lạt</h2>
@@ -74,7 +74,7 @@
           <img class="n2_star" src="./image/star.png">
           <img class="n2_star" src="./image/star.png">
         </span>
-        <br><span><a href="http://127.0.0.1:5500/expore.html" class="n2_btn_ct">Xem thêm</a></span>
+        <br><span><a href="https://letstravelvn.netlify.app/expore.html" class="n2_btn_ct">Xem thêm</a></span>
       </div>
       <div class="n2_container_items">
         <h2>Đà Nẵng</h2>
@@ -85,7 +85,7 @@
           <img class="n2_star" src="./image/star.png">
           <img class="n2_star" src="./image/star.png">
         </span>
-        <br><span><a href="http://127.0.0.1:5500/expore.html" class="n2_btn_ct">Xem thêm</a></span>
+        <br><span><a href="https://letstravelvn.netlify.app/expore.html" class="n2_btn_ct">Xem thêm</a></span>
       </div>
       <div class="n2_container_items">
         <h2>Hà Nội</h2>
@@ -96,7 +96,7 @@
           <img class="n2_star" src="./image/star.png">
           <img class="n2_star" src="./image/star.png">
         </span>
-        <br><span><a href="http://127.0.0.1:5500/expore.html" class="n2_btn_ct">Xem thêm</a></span>
+        <br><span><a href="https://letstravelvn.netlify.app/expore.html" class="n2_btn_ct">Xem thêm</a></span>
       </div>
       <div class="n2_container_items">
         <h2>Vịnh Hạ Long</h2>
@@ -107,7 +107,7 @@
           <img class="n2_star" src="./image/star.png">
           <img class="n2_star" src="./image/star.png">
         </span>
-        <br><span><a href="http://127.0.0.1:5500/expore.html" class="n2_btn_ct">Xem thêm</a></span>
+        <br><span><a href="https://letstravelvn.netlify.app/expore.html" class="n2_btn_ct">Xem thêm</a></span>
       </div>
     </div>
     <div class="n2_container_title">
@@ -123,7 +123,7 @@
         <img class="n2_star" src="./image/star.png">
         <img class="n2_star" src="./image/star.png">
       </span>
-      <br><span><a class="n2_btn_ct" href="http://127.0.0.1:5500/expore.html">Xem thêm</a></span>
+      <br><span><a class="n2_btn_ct" href="https://letstravelvn.netlify.app/expore.html">Xem thêm</a></span>
     </div>
     <div class="n2_container_title ">
       <h1>NHỮNG ĐỊA ĐIỂM DU LỊCH NỔI TIẾNG</h1>
