--- a/index.html
+++ b/index.html
@@ -32,25 +32,25 @@
         <div class="n2_content active">
             <h1> Let's Travel</h1>
             <p>Let's Travel không chỉ mang đến cảm giác tuyệt vời khi trải nghiệm mà còn mang đến cảm giác lưu luyến khó tả khi quay trở về. Kết thúc chuyến hành trình bạn sẽ là một con người hoàn toàn mới, mang nguồn năng lượng mới. Hy vọng với những chia sẻ phía trên sẽ giúp bạn hiểu thêm được về du lịch khám phá và có những lựa chọn tuyệt vời cho chuyến đi của mình.</p>
-                <a href="http://127.0.0.1:5500/home.html" class="n2_go_btn">➧ Let's Travel</a>   
+                <a href="https://letstravelvn.netlify.app/home.html" class="n2_go_btn">➧ Let's Travel</a>   
         </div>
         <div class="n2_content">
             <h1> Lặn Biển</h1>
             <p>Đến với các tour lặn biển, du khách sẽ được cung cấp đầy đủ dụng cụ cần thiết cho chuyến đi “săn cảnh” đại dương được trọn vẹn.
                  Tùy vào từng loại hình lặn biển khác nhau mà du khách có thể lặn ở các độ sâu khác nhau. 
                  Nhìn chung, dịch vụ lặn biển là hoạt động vui chơi độc đáo, hấp dẫn, được nhiều du khách chọn lựa và đánh giá cao khi đến đây du lịch.</p>
-                <a href="http://127.0.0.1:5500/home.html" class="n2_go_btn">➧ Let's Travel</a>   
+                <a href="https://letstravelvn.netlify.app/home.html" class="n2_go_btn">➧ Let's Travel</a>   
         </div>
         <div class="n2_content">
             <h1>Cắm Trại</h1>
             <p>Những trò chơi cắm trại không chỉ giúp không khí cả nhóm sôi động mà còn có khả năng gắn bó, xây dựng tình đoàn kết giữa các thành viên với nhau khi tham gia hội trại. Nhờ đó, những trò chơi Team Building hay các trò chơi cắm trại tập thể ngày càng được yêu thích trong những chuyến đi dã ngoại, cắm trại đông người,...</p>
-                <a href="http://127.0.0.1:5500/home.html" class="n2_go_btn">➧ Let's Travel</a>   
+                <a href="https://letstravelvn.netlify.app/home.html" class="n2_go_btn">➧ Let's Travel</a>   
         </div>
         <div class="n2_content">
             <h1>Khám Phá</h1>
             <p>Không có gì tuyệt vời hơn khi tự bản thân chúng ta được nhìn, được ngắm, được cầm, được nắm, được tận mắt chứng kiến và kiểm chứng mọi thứ diễn ra xung quanh.
                  Những chuyến đi như vậy thật sự sẽ mang lại những trải nghiệm vô cùng khó quên đối với tất cả mọi người.</p>
-                <a href="http://127.0.0.1:5500/home.html" class="n2_go_btn">➧ Let's Travel</a>   
+                <a href="https://letstravelvn.netlify.app/home.html" class="n2_go_btn">➧ Let's Travel</a>   
         </div>
         <div class="n2_media_icons">
             <a href="https://vi-vn.facebook.com/login/device-based/regular/login/?login_attempt=1"> <i class="fab fa-facebook-f"></i></a>
