--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
     <div class="n2_navigation">
       <div class="n2_navigation_items">
         <a href="https://letstravelvn.netlify.app/home.html">Trang Chủ</a>
-        <a href="https://letstravelvn.netlify.appindex.html">Giới Thiệu</a>
+        <a href="https://letstravelvn.netlify.app/index.html">Giới Thiệu</a>
         <a href="https://letstravelvn.netlify.app/expore.html">Du Lịch</a>
         <a href="https://letstravelvn.netlify.app/contact.html">Liên Hệ</a>
       </div>
