--- a/expore.html
+++ b/expore.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/expore.css">
-    <title>Tourdulich</title>
+    <title>TourDuLich</title>
 </head>
 
 <body>
