--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/home.css">
-  <title>Trangchu</title>
+  <title>TrangChu</title>
 </head>
 
 <body>
