--- a/contact.html
+++ b/contact.html
@@ -56,6 +56,9 @@
             </div>
         </div>
     </section>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
+    <script src="./js/home.js"></script>
 </body>
 
 </html>
